fix compiler name

--- a/judge.toml
+++ b/judge.toml
@@ -3,5 +3,5 @@
 image = { source = "dockerfile", path = ".", tag = "lab1-cpp-example" }
 
 run = [
-    "./compiler $input $ir",
+    "./toy_miniSysY $input $ir",
 ]
